<resources>
    <string name="app_name">DCCTL</string>
    <string name="camera_mode">Camera mode</string>
    <string name="cfg_delay">Delay</string>
    <string name="cfg_interval">Interval</string>
    <string name="cfg_count">Count</string>
    <string name="btnApply">Apply</string>
    <string name="btnPushRemote">Push to remote</string>
    <string name="btnExecLocal">Exec locally</string>
    <string name="config_mode">Create simple script</string>
    <string name="start_camera_service">Start camera service</string>
    <string name="stop_camera_service">Stop the camera service</string>
    <string name="scripting_mode">Create complex script</string>
    <string name="script_new_capture_multiple">Add \"Capture multiple\"...</string>
    <string name="script_new_wait">Add \"Wait\"...</string>
    <string name="script_new_audio_signal">Add \"Audio signal\"...</string>
    <string name="session_log">Session log</string>
    <string name="delete_command">Delete</string>
    <string name="cmd_wait">Wait</string>
    <string name="cmd_capture_multiple">Cap. multi.</string>
    <string name="cmd_audio_signal">Signal</string>
    <string name="send_script">Send</string>
    <string name="cfg_hold">Hold</string>
    <string name="cmd_blink">Blink</string>
    <string name="script_new_blink">Add \"Blink\"...</string>

    <string name="pref_excluded_devices">Exclude broadcast destinations</string>
    <string name="preferences">Preferences</string>
    <string name="network">Network</string>

    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_scripting">Scripting</string>
    <string name="notification_camera_is_active">Camera is active</string>
    <string name="terminate_service">Terminate</string>
    <string name="notification_stat_connections">Scripts received: %d</string>
    <string name="notification_stat_pictures_taken">Pictures taken: %d</string>
    <string name="notification_stat_times_blinked">Blinked %d times</string>
    <string name="cfg_flash">Flash</string>
    <string name="pref_tcp_server">Enable TCP server</string>
    <string name="camera_permission_dialog_title">Permission denied</string>
    <string name="camera_permission_dialog_message">
        Without this permission the app is unable to use the camera.
        Are you sure you want to deny this permission?
    </string>
    <string name="camera_permission_dialog_retry">Try again</string>
    <string name="camera_permission_dialog_yes">Yes</string>
    <string name="bluetooth_dialog_title">Bluetooth is disabled</string>
    <string name="bluetooth_dialog_message">
        With Bluetooth disabled this app won\'t be able to send or receive scripts.
    </string>
    <string name="bluetooth_dialog_retry">Try again</string>
    <string name="bluetooth_dialog_ok">OK</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="advanced">Advanced</string>
</resources>
