<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:onClick="onClickCameraService"
        android:text="@string/camera_service"
        />
    <Button
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:onClick="onClickConfigMode"
        android:text="@string/config_mode"
        />
    <Button
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:onClick="onClickScriptingMode"
        android:text="@string/scripting_mode"
        />
    <Button
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:onClick="onClickPreferences"
        android:text="@string/preferences"
        />
    <Button
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:onClick="onClickLogMode"
        android:text="@string/session_log"
        />
</LinearLayout>