<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="cmd"
            type="net.easimer.dcctl.scripting.ScriptCommand.CaptureMultiple" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cfgDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cfg_interval"
                android:inputType="number" />
            <!--android:text="@={cmd.interval}" /> -->
        <EditText
            android:id="@+id/cfgCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cfg_count"
            android:inputType="number" />
            <!-- android:text="@={cmd.count}" /> -->
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="onClickDelete"
            android:text="@string/delete_command"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cmd_capture_multiple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
